--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: gitHappyR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Helper Functions for Running a Course with GitHub and RStudio
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
+Author: Ken Field
+Maintainer: Ken Field <ken.field@bucknell.edu>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+License: CC-BY-SA-4.0
 Encoding: UTF-8
 LazyData: true
 URL: https://github.com/KField-Bucknell/gitHappyR
