--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,3 +11,4 @@ Encoding: UTF-8
 LazyData: true
 URL: https://github.com/KField-Bucknell/gitHappyR
 BugReports: https://github.com/KField-Bucknell/gitHappyR/issues
+RoxygenNote: 7.3.1
